--- a/front end/login.html
+++ b/front end/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UCIHack App Login</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -14,11 +15,13 @@
             <h1>Login</h1>
 
             <div class="input-box">
-                <input type="text" placeholder="Email">
+                <input type="text" placeholder="Email" required>
+                <i class='bx bxs-user'></i>
             </div>
 
             <div class="input-box">
-                <input type="password" placeholder="Password">
+                <input type="password" placeholder="Password" required>
+                <i class='bx bxs-lock-alt'></i>
             </div>
 
             <a href="home.html"><button type="submit" class="btn">Login</button></a>
