--- a/front end/home.html
+++ b/front end/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UCIHack App Home</title>
+    <title>UCIHack App Home hi :)</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
