--- a/front end/home.html
+++ b/front end/home.html
@@ -4,12 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UCIHack App Home hi :)</title>
+    <title>UCIHack App Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <h1>Home</h1>
+<body class="home-body">
+    <header>
+        <div class="home-container">
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Messages</a></li>
+                    <li><a href="#">Profile</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 
 </html>
