--- a/front end/login.html
+++ b/front end/login.html
@@ -9,17 +9,17 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
-<body>
-    <div class="wrapper">
+<body class="login-body">
+    <div class="login">
         <form action="">
             <h1>Login</h1>
 
-            <div class="input-box"> 
+            <div class="login-input-box"> 
                 <input type="text" placeholder="Email" required>
                 <i class='bx bxs-user'></i>
             </div>
 
-            <div class="input-box">
+            <div class="login-input-box">
                 <input type="password" placeholder="Password" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
