--- a/front end/login.html
+++ b/front end/login.html
@@ -11,7 +11,7 @@
 
 <body class="login-body">
     <div class="login">
-        <form action="">
+        <form action="home.html">
             <h1>Login</h1>
 
             <div class="login-input-box"> 
@@ -24,7 +24,7 @@
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
-            <a href="home.html"><button type="submit" class="btn">Login</button></a>
+            <button type="submit" class="btn">Login</button>
 
             <div class="register-link">
                 <p>Don't have an account? <a href="register.html">Register</a></p>
