--- a/front end/login.html
+++ b/front end/login.html
@@ -7,6 +7,7 @@
     <title>UCIHack App Login</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="users.js"></script>
 </head>
 
 <body class="login-body">
@@ -24,7 +25,7 @@
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
-            <button type="submit" class="btn">Login</button>
+            <button onclick="login()" type="submit" class="btn">Login</button>
 
             <div class="register-link">
                 <p>Don't have an account? <a href="register.html">Register</a></p>
