--- a/front end/login.html
+++ b/front end/login.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UCIHack App Login</title>
     <link rel="stylesheet" href="style.css">
+    <link href="../backend/users.js"
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="users.js"></script>
+    <script src="irvinehacks2024/backend/users.js"></script>
 </head>
 
 <body class="login-body">
@@ -25,7 +26,7 @@
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
-            <button onclick="login()" type="submit" class="btn">Login</button>
+            <button onclick="" type="" class="btn">Login</button>
 
             <div class="register-link">
                 <p>Don't have an account? <a href="register.html">Register</a></p>
