--- a/front end/login.html
+++ b/front end/login.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link href="../backend/users.js"
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <script src="irvinehacks2024/backend/users.js"></script>
+    
 </head>
+
 
 <body class="login-body">
     <div class="login">
@@ -17,16 +18,16 @@
             <h1>Login</h1>
 
             <div class="login-input-box"> 
-                <input type="text" placeholder="Email" required>
+                <input id="email" type="text" placeholder="Email" required>
                 <i class='bx bxs-user'></i>
             </div>
 
             <div class="login-input-box">
-                <input type="password" placeholder="Password" required>
+                <input id="password" type="password" placeholder="Password" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
-            <button onclick="" type="" class="btn">Login</button>
+            <button onclick="checkLogin()" type="button" class="btn">Login</button>
 
             <div class="register-link">
                 <p>Don't have an account? <a href="register.html">Register</a></p>
@@ -34,6 +35,21 @@
 
         </form>
     </div>
+
+    <script>
+        import data from "backend/userData.json"
+        function checkLogin() {
+            var email = document.getElementById("email").value;
+            var password = document.getElementById("password").value;
+
+            var user = users.find(u => u.email == email && u.password == password);
+            if (user) {
+                window.location.href = "home.html";
+            } else {
+                alert("Invalid email or password. Please try again.");
+            }
+        }
+    </script>
 </body>
 
 </html>
