created register page

--- a/front end/home.html
+++ b/front end/home.html
@@ -10,9 +10,9 @@
 
 <body class="home-body">
     <header>
-        <div class="home-container">
+        <div class="home-navbar">
             <nav>
-                <ul>
+                <ul class="links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Messages</a></li>
                     <li><a href="#">Profile</a></li>
