--- a/front end/login.html
+++ b/front end/login.html
@@ -6,28 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UCIHack App Login</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
     <script src="users.js"></script>
 </head>
 
-<body class="login-body">
+<body class="body">
     <div class="login">
         <form action="home.html">
             <h1>Login</h1>
 
-            <div class="login-input-box"> 
+            <div class="input-box"> 
                 <input type="text" placeholder="Email" required>
                 <i class='bx bxs-user'></i>
             </div>
 
-            <div class="login-input-box">
+            <div class="input-box">
                 <input type="password" placeholder="Password" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
             <button onclick="login()" type="submit" class="btn">Login</button>
 
-            <div class="register-link">
+            <div class="link">
                 <p>Don't have an account? <a href="register.html">Register</a></p>
             </div>
 
