--- a/front end/register.html
+++ b/front end/register.html
@@ -11,7 +11,7 @@
 
 <body class="body">
     <div class="register">
-        <form action="profile.html">
+        <form action="profilecreator.html">
             <h1>Register</h1>
 
             <div class="input-box"> 
