linked up pages

--- a/front end/home.html
+++ b/front end/home.html
@@ -13,9 +13,9 @@
         <div class="home-navbar">
             <nav>
                 <ul class="links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Messages</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="messages.html">Messages</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                 </ul>
             </nav>
         </div>
