--- a/front end/profile.html
+++ b/front end/profile.html
@@ -45,22 +45,22 @@
     <div class="gallery">
 
         <div class="image">
-            <a target="_blank" href="img_5terre.jpg">
-              <img src="img_5terre.jpg" alt="Cinque Terre" width="500" height="500">
+            <a target="_blank" href="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png">
+              <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" alt="Cinque Terre" width="500" height="500">
             </a>
             <div class="desc">Add a description of the image here</div>
           </div>
           
           <div class="image">
-            <a target="_blank" href="img_forest.jpg">
-              <img src="img_forest.jpg" alt="Forest" width="500" height="500">
+            <a target="_blank" href="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png">
+              <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" alt="Forest" width="500" height="500">
             </a>
             <div class="desc">Add a description of the image here</div>
           </div>
           
           <div class="image">
-            <a target="_blank" href="img_lights.jpg">
-              <img src="img_lights.jpg" alt="Northern Lights" width="500" height="500">
+            <a target="_blank" href="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png">
+              <img src="https://cdn1.iconfinder.com/data/icons/business-company-1/500/image-512.png" alt="Northern Lights" width="500" height="500">
             </a>
             <div class="desc">Add a description of the image here</div>
           </div>
