--- a/front end/login.html
+++ b/front end/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UCIHack App Login</title>
+    <title>UCI Connected Login</title>
     <link rel="stylesheet" href="style.css">
     <link href="../backend/users.js"
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
