added edit profile link

--- a/front end/profile.html
+++ b/front end/profile.html
@@ -22,7 +22,7 @@
 
 				<h1 class="profile-user-name">Joe Mama</h1>
 
-				<button class="btn profile-edit-btn">Edit Profile</button>
+				<a href="profileeditor.html"><button class="btn profile-edit-btn">Edit Profile</button></a>
 
 				<button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
 
