--- a/front end/login.html
+++ b/front end/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="../backend/users.js">
     <link rel="stylesheet" href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
-    <script src="irvinehacks2024/backend/users.js"></script>
+    <script src="../backend/users.js"></script>
 </head>
 
 
@@ -18,16 +18,16 @@
             <h1>Login</h1>
 
             <div class="input-box"> 
-                <input type="text" placeholder="Email" required>
+                <input id="email" type="text" placeholder="Email" required>
                 <i class='bx bxs-user'></i>
             </div>
 
             <div class="input-box">
-                <input type="password" placeholder="Password" required>
+                <input id="password" type="password" placeholder="Password" required>
                 <i class='bx bxs-lock-alt'></i>
             </div>
 
-            <button onclick="checkLogin()" type="submit" class="btn">Login</button>
+            <button onclick="checkLogin()" type="button" class="btn">Login</button>
 
             <div class="link">
                 <p>Don't have an account? <a href="register.html">Register</a></p>
@@ -37,13 +37,21 @@
     </div>
 
     <script>
-        import data from "backend/userData.json"
         function checkLogin() {
             var email = document.getElementById("email").value;
             var password = document.getElementById("password").value;
-
-            var user = data.find(u => u.email == email && u.password == password);
-            if (email == "o" && user == "o") {
+            fetch("../backend/userData.json")
+                .then(response => response.json())
+                .then(data => {
+                    var user = data.users.find(u => u.email === email && u.password === password);
+                    if (user) {
+                        window.location.href = "home.html";
+                    } else {
+                        alert("Invalid email or password. Please try again.");
+                    }
+                })
+                .catch(error => console.log(error));
+            if (user) {
                 window.location.href = "home.html";
             } else {
                 alert("Invalid email or password. Please try again.");
