added navbar to html

--- a/front end/home.html
+++ b/front end/home.html
@@ -10,16 +10,26 @@
 
 <body class="home-body">
     <header>
-        <div class="home-navbar">
+        <div id="home"><a href="home.html">Home</a></div>
+
+        <div id="nav">
             <nav>
-                <ul class="links">
-                    <li><a href="home.html">Home</a></li>
+                <ul>
+                    <li><a href="matches.html">Matches</a></li>
                     <li><a href="messages.html">Messages</a></li>
                     <li><a href="profile.html">Profile</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
+    <div id="profiles">
+
+    </div>
+
+    <div id="matches">
+
+    </div>
 </body>
 
 </html>
