--- a/front end/profileeditor.html
+++ b/front end/profileeditor.html
@@ -9,6 +9,20 @@
 </head>
 
 <body>
+    <header>
+        <div id="home"><a href="home.html">Home</a></div>
+
+        <div id="nav">
+            <nav>
+                <ul>
+                    <li><a href="matches.html">Matches</a></li>
+                    <li><a href="messages.html">Messages</a></li>
+                    <li><a href="profile.html">Profile</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
     <h1>Profile Editor</h1>
 </body>
 
