--- a/front end/messages.html
+++ b/front end/messages.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
+<header>
+    <div id="home"><a href="home.html">Home</a></div>
+  
+    <div id="nav">
+        <nav>
+            <ul>
+                <li><a href="matches.html">Matches</a></li>
+                <li><a href="messages.html">Messages</a></li>
+                <li><a href="profile.html">Profile</a></li>
+            </ul>
+        </nav>
+    </div>
+  </header>
+
 <body>
     <h1>Messages</h1>
 </body>
