Made all html consistent

--- a/front end/matches.html
+++ b/front end/matches.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UCI Connected Home</title>
+    <title>UCI Connected Matches</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,7 +23,7 @@
 </header>
 
 <body>
-    <div id="profiles">
+    <div class="matches">
 
     </div>
 </body>
