--- a/front end/messages.html
+++ b/front end/messages.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UCIHack App Messages</title>
+    <title>UCI Connected Messages</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -20,10 +20,16 @@
             </ul>
         </nav>
     </div>
-  </header>
+</header>
 
 <body>
-    <h1>Messages</h1>
+    <div id="people">
+
+    </div>
+
+    <div id="messages">
+
+    </div>
 </body>
 
 </html>
