--- a/front end/profileeditor.html
+++ b/front end/profileeditor.html
@@ -4,26 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UCIHack App Messages</title>
+    <title>UCI Connected Profile Editor</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
+<header>
+    <div id="home"><a href="home.html">Home</a></div>
+
+    <div id="nav">
+        <nav>
+            <ul>
+                <li><a href="matches.html">Matches</a></li>
+                <li><a href="messages.html">Messages</a></li>
+                <li><a href="profile.html">Profile</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
 <body>
-    <header>
-        <div id="home"><a href="home.html">Home</a></div>
 
-        <div id="nav">
-            <nav>
-                <ul>
-                    <li><a href="matches.html">Matches</a></li>
-                    <li><a href="messages.html">Messages</a></li>
-                    <li><a href="profile.html">Profile</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
-    <h1>Profile Editor</h1>
 </body>
 
 </html>
