--- a/front end/register.html
+++ b/front end/register.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UCIHack App Register</title>
+    <title>UCI Connected Register</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
 </head>
 
-<body class="body">
+<body>
     <div class="register">
         <form action="profileeditor.html">
             <h1>Register</h1>
