organized css and html

--- a/front end/home.html
+++ b/front end/home.html
@@ -24,7 +24,17 @@
 
 <body>
     <div id="profiles">
+        <div id="left">
+            Petr No
+        </div>
 
+        <div id="profile">
+            Profile
+        </div>
+
+        <div id="right">
+            Petr Yes
+        </div>
     </div>
 </body>
 
