fixed login and register containers

--- a/front end/login.html
+++ b/front end/login.html
@@ -11,7 +11,7 @@
     <script src="../backend/users.js"></script>
 </head>
 
-<body>
+<body class="container">
     <div class="login">
         <form action="home.html">
             <h1>Login</h1>
