made columns in home

--- a/front end/home.html
+++ b/front end/home.html
@@ -24,16 +24,20 @@
 
 <body>
     <div id="profiles">
-        <div id="left">
-            Petr No
-        </div>
+        <div class="rows">
 
-        <div id="profile">
-            Profile
-        </div>
+            <div class="column left">
+                <h1>Peter No</h1>
+            </div>
+    
+            <div class="column middle">
+                <h1>Profile</h1>
+            </div>
+    
+            <div class="column right">
+                <h1>Peter Yes</h1>
+            </div>
 
-        <div id="right">
-            Petr Yes
         </div>
     </div>
 </body>
