--- a/front end/profile.html
+++ b/front end/profile.html
@@ -6,39 +6,52 @@
     <link rel="stylesheet" href="profile.css">
 </head>
 
+
 <header>
+  <div id="home"><a href="home.html">Home</a></div>
 
-	<div class="container">
-
-		<div class="profile">
-
-			<div class="profile-image">
-
-				<img src="https://upload.wikimedia.org/wikipedia/en/0/0e/University_of_California%2C_Irvine_seal.svg" alt="">
-
-			</div>
-
-			<div class="profile-user-settings">
-
-				<h1 class="profile-user-name">Joe Mama</h1>
-
-				<a href="profileeditor.html"><button class="btn profile-edit-btn">Edit Profile</button></a>
-
-				<button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
-
-			</div>
-
-			<div class="profile-bio">
-
-				<p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
-
-			</div>
-
-		</div>
-
-	</div>
-
+  <div id="nav">
+      <nav>
+          <ul>
+              <li><a href="matches.html">Matches</a></li>
+              <li><a href="messages.html">Messages</a></li>
+              <li><a href="profile.html">Profile</a></li>
+          </ul>
+      </nav>
+  </div>
 </header>
+
+
+<div class="container">
+
+  <div class="profile">
+
+    <div class="profile-image">
+
+      <img src="https://upload.wikimedia.org/wikipedia/en/0/0e/University_of_California%2C_Irvine_seal.svg" alt="">
+
+    </div>
+
+    <div class="profile-user-settings">
+
+      <h1 class="profile-user-name">Joe Mama</h1>
+
+      <a href="profileeditor.html"><button class="btn profile-edit-btn">Edit Profile</button></a>
+
+      <button class="btn profile-settings-btn" aria-label="profile settings"><i class="fas fa-cog" aria-hidden="true"></i></button>
+
+    </div>
+
+    <div class="profile-bio">
+
+      <p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
+
+    </div>
+
+  </div>
+
+</div>
+
 
 <body>
 
