--- a/front end/home.html
+++ b/front end/home.html
@@ -27,15 +27,16 @@
         <div class="rows">
 
             <div class="column left">
-                <h1>Peter No</h1>
+                <button><img src="" alt="Peter No"></button>
             </div>
     
             <div class="column middle">
+                <div class="profile-image"><img src="https://upload.wikimedia.org/wikipedia/en/0/0e/University_of_California%2C_Irvine_seal.svg" alt=""></div>
                 <h1>Profile</h1>
             </div>
     
             <div class="column right">
-                <h1>Peter Yes</h1>
+                <button><img src="" alt="Peter Yes"></button>
             </div>
 
         </div>
