--- a/front end/home.html
+++ b/front end/home.html
@@ -27,7 +27,7 @@
         <div class="rows">
 
             <div class="column left">
-                <button><img src="" alt="Peter No"></button>
+                <button class="choice-btn"><img src="" alt="Peter No"></button>
             </div>
     
             <div class="column middle">
@@ -36,7 +36,7 @@
             </div>
     
             <div class="column right">
-                <button><img src="" alt="Peter Yes"></button>
+                <button class="choice-btn"><img src="" alt="Peter Yes"></button>
             </div>
 
         </div>
