--- a/front end/profile.html
+++ b/front end/profile.html
@@ -34,7 +34,7 @@
 
     <div class="profile-user-settings">
 
-      <h1 class="profile-user-name">Joe Mama</h1>
+      <h1 class="profile-user-name">Joe Mama, Age</h1>
 
       <a href="profileeditor.html"><button class="btn profile-edit-btn">Edit Profile</button></a>
 
