--- a/front end/profile.html
+++ b/front end/profile.html
@@ -43,10 +43,12 @@
 
       </div>
 
+      <div class="profile-major">
+        <h3>Ligma</h3>
+      </div>
+
       <div class="profile-bio">
-
-        <p><span class="profile-real-name">Jane Doe</span> Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
-
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit 📷✈️🏕️</p>
       </div>
 
     </div>
