--- a/front end/home.html
+++ b/front end/home.html
@@ -32,9 +32,10 @@
     
             <div class="column middle">
                 <div class="profile-image"><img src="https://t4.ftcdn.net/jpg/00/64/67/63/360_F_64676383_LdbmhiNM6Ypzb3FM4PPuFP9rHe7ri8Ju.jpg" alt=""></div>
-                <h1 class="user-name">Name, Age</h1>
-                <h4 class="user-major">Major</h4>
-                <p class="bio">bio</p>
+                <h1 class="user-name">{{ name }}, {{ age }}</h1>
+
+                <h4 class="user-major">{{ major }}</h4>
+                <p class="bio">{{ bio }}</p>
 
                 <div class="gallery">
 
